# parallel_llm_trainer

./: .gitignore  Cargo.toml  README.md
front/: package.json  pnpm-lock.yaml
front/app/: layout.tsx
front/components/: dashboard-content.tsx  dashboard-layout.tsx  header.tsx  model-architecture.tsx  network-graph.tsx  recent-jobs.tsx  sidebar-context.tsx  sidebar.tsx  system-status.tsx  training-controls.tsx  training-metrics.tsx  training-overview.tsx
src/: dataset.rs  lib.rs  main.rs  neural_network.rs  trainer.rs
